# mqt-syrec

./: .cirrus.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .flake8  .gitignore  .gitmodules  .lgtm.yml  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CMakeSettings.json  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py
src/: CMakeLists.txt  Dummy.cpp
src/algorithms/optimization/: esop_minimization.cpp
src/algorithms/simulation/: circuit_to_truthtable.cpp  simple_simulation.cpp
src/algorithms/synthesis/: dd_synthesis.cpp  encoding.cpp  original_syrec.cpp  syrec_cost_aware_synthesis.cpp  syrec_line_aware_synthesis.cpp  syrec_synthesis.cpp  syrec_synthesis_additional_lines.cpp  syrec_synthesis_garbagefree.cpp  syrec_synthesis_no_additional_lines.cpp  syrec_synthesis_p.cpp
src/core/: circuit.cpp  gate.cpp  pattern.cpp  properties.cpp  target_tags.cpp  test_functions.cpp  truth_table.cpp  version.cpp
src/core/functions/: active_controls.cpp  add_circuit.cpp  add_gates.cpp  add_line_to_circuit.cpp  circuit_hierarchy.cpp  circuit_to_truth_table.cpp  clear_circuit.cpp  copy_circuit.cpp  copy_metadata.cpp  create_simulation_pattern.cpp  expand_circuit.cpp  extend_truth_table.cpp  find_lines.cpp  flatten_circuit.cpp  fully_specified.cpp  reverse_circuit.cpp  transposition_to_circuit.cpp
src/core/io/: create_image.cpp  pla_parser.cpp  print_circuit.cpp  print_statistics.cpp  read_pattern.cpp  read_pla.cpp  read_realization.cpp  read_specification.cpp  revlib_parser.cpp  revlib_processor.cpp  test_syrec.cpp  write_blif.cpp  write_realization.cpp  write_specification.cpp  write_verilog.cpp
src/core/meta/: bus_collection.cpp
src/core/real/: parser.cpp
src/core/syrec/: expression.cpp  grammar.cpp  modified_variables.cpp  module.cpp  number.cpp  parser.cpp  program.cpp  reverse_statements.cpp  statement.cpp  variable.cpp  write_systemc.cpp
src/core/syrec/parser/antlr/: TSyrecLexer.cpp  TSyrecLexer.h  TSyrecLexer.interp  TSyrecParser.cpp  TSyrecParser.h  TSyrecParser.interp  TSyrecParser.tokens  TSyrecParserBaseVisitor.cpp  TSyrecParserBaseVisitor.h  TSyrecParserVisitor.cpp  TSyrecParserVisitor.h
src/core/syrec/parser/antlr/grammar/: TSyrecLexer.g4  TSyrecParser.g4
src/core/syrec/parser/components/: custom_base_visitor.cpp  custom_error_listener.cpp  custom_expression_visitor.cpp  custom_module_visitor.cpp  custom_number_and_signal_visitor.cpp  custom_statement_visitor.cpp
src/core/syrec/parser/utils/: base_syrec_ir_entity_stringifier.cpp  if_statement_expression_components_recorder.cpp  parser_messages_container.cpp  variable_access_index_check.cpp  variable_overlap_check.cpp
src/core/syrec/parser/utils/symbolTable/: base_symbol_table.cpp  temporary_variable_scope.cpp
src/core/truthTable/: dd_synthesis.cpp  pla_parser.cpp  truth_table.cpp  tt_to_dd.cpp
src/core/utils/: base_syrec_ir_entity_stringifier.cpp  costs.cpp  ir_entity_stringifier.cpp  program_options.cpp
src/dd_synthesis/: tt_qmdd.cpp
src/mqt/syrec/: __init__.py  syrec_editor.py
src/python/: CMakeLists.txt  bindings.cpp
test/: CMakeLists.txt  main.cpp  test_dummy.cpp  test_simple_add.cpp
test/circuits/: 14_bit.pla  3_17_6.pla  4_49_7.pla  4gt10.pla  4gt5.pla  4mod5.pla  EXTENDTT.pla  HUFF2.pla  Ident2Bit.pla  Max.pla  Note  SWAP.pla  Toffoli.pla  adder2Bit.pla  adder3Bit.pla  alu_2.src  aludc.pla  asym.pla  binary_numeric.src  bitwiseXor2Bit.pla  bitwise_and_2.src  bitwise_or_2.src  bn_2.src  c17.pla  call_8.src  circuits.csv  circuits_simulation.json  circuits_simulation_add_lines.json  circuits_synthesis.json  circuits_synthesis_add_lines.json  cnot.pla  con1.pla  constExpr_8.src  counter.pla  dc2.pla  dc3bit.pla  dc3bitNew.pla  dcX2bit.pla  dcX4bit.pla  decode24.pla  (+74 more)
test/configs/: circuits_cost_aware_synthesis.json  circuits_line_aware_simulation.json  circuits_line_aware_synthesis.json  circuits_simulation_add_lines.json  circuits_synthesis.json  circuits_synthesis_add_lines.json
test/python/: constraints.txt  test.py  test_syrec.py
test/unittests/: functions.cpp  functions.hpp  test.csv  test_add_lines_simulation.cpp  test_add_lines_synthesis.cpp  test_alu.cpp  test_binary_numeric.cpp  test_bitwise_and.cpp  test_bitwise_or.cpp  test_bn.cpp  test_call.cpp  test_circuit_tests.cpp  test_cost_aware_simulation.cpp  test_cost_aware_synthesis.cpp  test_dd_synthesis.cpp  test_dd_synthesis_dc.cpp  test_divide.cpp  test_extend_tt.cpp  test_for.cpp  test_for_32.cpp  test_gray_to_binary.cpp  test_huffman.cpp  test_input_repeated.cpp  test_input_repeated_2.cpp  test_line_aware_simulation.cpp  test_line_aware_synthesis.cpp  test_logical_and.cpp  test_logical_or.cpp  test_modulo.cpp  test_multiple_statement.cpp  test_multiply.cpp  test_n_bit_values_container.cpp  test_negate.cpp  test_numeric.cpp  test_operators_repeated.cpp  test_parity.cpp  test_parity_check.cpp  test_parser.cpp  test_pla_parser.cpp  test_real_parser.cpp  (+8 more)
test/unittests/syrec/parser/: test_base_symbol_table.cpp  test_syrec_parser.cpp  test_syrec_parser_errors.cpp  test_syrec_parser_module_overload_resolution.cpp  test_syrec_parser_operation_utils.cpp  test_syrec_parser_public_interface_error_cases.cpp  test_syrec_parser_success_cases.cpp  test_syrec_parser_variable_overlap_errors.cpp  test_temporary_variable_scope.cpp  test_variable_access_index_validity.cpp  test_variable_overlap_check.cpp
test/unittests/syrec/parser/data/error/: test_production_assignStatement_errors.cpp  test_production_binaryExpression_errors.cpp  test_production_callStatement_errors.cpp  test_production_forStatement_errors.cpp  test_production_ifStatement_errors.cpp  test_production_module_errors.cpp  test_production_number_errors.cpp  test_production_parameter_errors.cpp  test_production_program.json  test_production_shiftExpression_errors.cpp  test_production_signalList_errors.cpp  test_production_signal_errors.cpp  test_production_swapStatement_errors.cpp  (+3 more)
test/unittests/syrec/parser/utils/: test_syrec_parser_base.hpp  test_syrec_parser_errors_base.hpp  test_syrec_parser_utils.hpp
(+167 files in other folders)
