[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7",
    "ninja>=1.10; sys_platform != 'win32'",
    "cmake>=3.14",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
docs = [
    "sphinx-rtd-dark-mode",
]

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp3*"
archs = "auto64"
skip = "*-musllinux_*"
test-skip = "*-macosx_arm64 *-musllinux* *aarch64"
test-extras = ["test"]
test-command = "cd {project}/test/python && python -m pytest ."
environment = { DEPLOY = "ON" }
build-frontend = "build"
build-verbosity = 3

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = [
    "curl -L -O https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz",
    "tar -xzf boost_1_*",
    "cd boost_1_*/",
    "./bootstrap.sh",
    "./b2 install --with-system"
]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15", DEPLOY = "ON" }

[tool.cibuildwheel.windows]
test-command = "python -c \"from mqt import syrec\""

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test/python"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = ["error"]

[tool.coverage.run]
source = ["mqt.syrec"]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["mqt/syrec", "test/python"]

[tool.pylint]
master.py-version = "3.7"
master.jobs = "0"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.enable = [
    "useless-suppression",
]
messages_control.disable = [
    "invalid-name",
    "line-too-long",
    "missing-module-docstring",
    "no-member",
    "protected-access",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-locals",
    "too-many-statements",
    "ungrouped-imports",
    "wrong-import-order",
    "wrong-import-position",
]
